# LeapGameEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Audio/: AudioSystem.cpp  CMakeLists.txt
Audio/FMOD/: FmodAudioClip.cpp  FmodAudioClip.h  FmodAudioSystem.cpp  FmodAudioSystem.h
Audio/HelperObjects/: ChannelData.h  SoundData3D.h
Audio/Interfaces/: AudioSystem.h  IAudioClip.h  IAudioSystem.h
Audio/Systems/: FmodAudioSystem.cpp  FmodAudioSystem.h
Data/: Cube.fbx  Heightmap.fx  Pos3D.fx  PosNorm3D.fx  PosNormTex3D.fx  Sprites.fx  Tank.fbx
Graphics/: CMakeLists.txt  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  MeshLoader.cpp  MeshLoader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderDelete.cpp  ShaderDelete.h  Utils.h  VulkanEngine.cpp  VulkanEngine.h  VulkanInitializers.cpp  VulkanInitializers.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanTypes.h  vk_mesh.cpp  vk_mesh.h
Graphics/Data/: CustomMesh.h  MeshData.h  RenderData.h  Sprite.h  SpriteVertex.h  Vertex.h
Graphics/DirectX/: DirectXDefaults.cpp  DirectXDefaults.h  DirectXEngine.cpp  DirectXEngine.h  DirectXMaterial.cpp  DirectXMaterial.h  DirectXMesh.cpp  DirectXMesh.h  DirectXMeshLoader.cpp  DirectXMeshLoader.h  DirectXMeshRenderer.cpp  DirectXMeshRenderer.h  DirectXRenderTarget.cpp  DirectXRenderTarget.h  DirectXShaderReader.cpp  DirectXShaderReader.h  DirectXShadowRenderer.cpp  DirectXShadowRenderer.h  DirectXSpriteRenderer.cpp  DirectXSpriteRenderer.h  DirectXTexture.cpp  DirectXTexture.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h
Graphics/ImGui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
Graphics/Interfaces/: IMaterial.h  IMesh.h  IMeshRenderer.h  IRenderer.h  ITexture.h
Graphics/Shaders/: Billboard.cpp  Billboard.h  Heightmap.cpp  Heightmap.h  Pos3D.cpp  Pos3D.h  PosNorm3D.cpp  PosNorm3D.h  PosNormCol.frag  PosNormCol.vert  PosNormTex3D.cpp  PosNormTex3D.h  ShadowMap.cpp  ShadowMap.h  Sprites.cpp  Sprites.h  colored_triangle.frag  colored_triangle.vert  tri_mesh.vert  triangle.frag  triangle.vert
Graphics/Shaders/Compiled/: PosNormCol.frag.spv  PosNormCol.vert.spv  tri_mesh.vert.spv
Graphics/Vulkan/: VulkanEngine.h  VulkanInitializers.h  VulkanTypes.h
Inputs/: CMakeLists.txt  InputManager.cpp  InputManager.h  InputManagerGLFW3.cpp  InputManagerGLFW3.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
LeapEngine/: CMakeLists.txt  Leap.cpp  Leap.h  ServiceLocator.cpp  ServiceLocator.h
LeapEngine/Components/: Component.cpp  Component.h
LeapEngine/Components/Audio/: AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h
LeapEngine/Components/Physics/: BoxCollider.cpp  BoxCollider.h  CapsuleCollider.cpp  CapsuleCollider.h  Collider.cpp  Collider.h  Rigidbody.cpp  Rigidbody.h  SphereCollider.cpp  SphereCollider.h
LeapEngine/Components/RenderComponents/: CameraComponent.cpp  CameraComponent.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  MeshRenderer.cpp  MeshRenderer.h  ParticleRenderer.cpp  ParticleRenderer.h  SpriteRendererComponent.cpp  SpriteRendererComponent.h  TerrainComponent.cpp  TerrainComponent.h
LeapEngine/Components/RenderComponents/UIComponents/: Button.cpp  Button.h  CanvasActions.cpp  CanvasActions.h  CanvasComponent.cpp  CanvasComponent.h  CanvasElement.cpp  CanvasElement.h  ICanvasElement.h  Image.cpp  Image.h  RectTransform.cpp  RectTransform.h
LeapEngine/Components/Transform/: Transform.cpp  Transform.h
LeapEngine/Coroutines/: Coroutine.h  CoroutineSystem.cpp  CoroutineSystem.h  DefaultIEnumerators.cpp  DefaultIEnumerators.h
LeapEngine/GameContext/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  GameContext.cpp  GameContext.h  ImGuiLogger.cpp  ImGuiLogger.h  Timer.cpp  Timer.h  Window.cpp  Window.h
LeapEngine/GameContext/Logger/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.h  ImGuiLogger.cpp  ImGuiLogger.h  NetworkLogger.cpp  NetworkLogger.h
LeapEngine/Graphics/: GraphicsObject.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.h  Texture.cpp  Texture.h
LeapEngine/Physics/: Physics.cpp  Physics.h  PhysicsSync.cpp
LeapEngine/SceneGraph/: GameObject.cpp  GameObject.h  GameObjectUtils.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
LeapEngine/ServiceLocator/: ServiceLocator.cpp  ServiceLocator.h
LeapEngine/Utility/: GameObjectUtility.cpp  GameObjectUtility.h
LeapEngine/Utils/: Physics.cpp  Physics.h  PhysicsSync.cpp  PhysicsSync.h
Networking/: CMakeLists.txt
Physics/: CMakeLists.txt  Physics.cpp
Physics/Data/: CollisionData.h  Force.h  ForceMode.h  RaycastHit.h  Rigidbody.cpp  Rigidbody.h  SimulationEventData.h
Physics/Interfaces/: IPhysics.h  IPhysicsMaterial.h  IPhysicsObject.h  IPhysicsScene.h  IShape.h
Physics/PhysX/: PhysXEngine.cpp  PhysXEngine.h  PhysXMaterial.cpp  PhysXMaterial.h  PhysXObject.cpp  PhysXObject.h  PhysXScene.cpp  PhysXScene.h  PhysXShapes.cpp  PhysXShapes.h  PhysXSimulationCallbacks.cpp  PhysXSimulationCallbacks.h  PhysXSimulationData.h  PhysXSimulationFilterCallback.cpp  PhysXSimulationFilterCallback.h  PhysXSimulationFilterShader.h
UnnamedAdventureGame/: CMakeLists.txt  main.cpp
UnnamedAdventureGame/Components/: ApplyForces.cpp  ApplyForces.h  AudioTester.cpp  AudioTester.h  ColliderScaler.cpp  ColliderScaler.h  FreeCamMovement.cpp  FreeCamMovement.h  ImGuiSceneChooser.cpp  ImGuiSceneChooser.h  InfoUI.cpp  InfoUI.h  PointConversionTest.cpp  PointConversionTest.h  PrintCollision.cpp  PrintCollision.h  PrintVelocity.cpp  PrintVelocity.h  SineWaveTerrain.cpp  SineWaveTerrain.h  Transformator.cpp  Transformator.h  WindowManager.cpp  WindowManager.h
UnnamedAdventureGame/Components/Debug/: SceneComponent.cpp  SceneComponent.h
UnnamedAdventureGame/Scenes/: ExtendedCameraTest.cpp  ExtendedCameraTest.h  MainMenuScene.cpp  MainMenuScene.h  MainScene.cpp  MainScene.h  MeshLoadingTest.cpp  MeshLoadingTest.h  ParticleTest.cpp  ParticleTest.h
Utils/: CMakeLists.txt  Command.h  DataCommand.h  Debug.cpp  Debug.h  Delegate.h  EventPool.h  LambdaCommand.h  Matrix.h  Observer.h  Prototype.h  Singleton.h  (+6 more)
(+16 files in other folders)
