#Leap engine library
add_library(LeapEngine STATIC
    "Leap.cpp"
    "GameContext/Timer.cpp"
    "GameContext/GameContext.cpp"
    "ServiceLocator/ServiceLocator.cpp"
    "SceneGraph/GameObject.cpp"
    "Components/Component.cpp"
    "Components/Transform/Transform.cpp"
    "SceneGraph/Scene.cpp"
    "SceneGraph/SceneManager.cpp"
    "Components/RenderComponents/CameraComponent.cpp" 
    "Components/RenderComponents/MeshRenderer.cpp" 
    "Components/RenderComponents/DirectionalLightComponent.cpp" 
    "GameContext/Window.cpp" 
    "Components/RenderComponents/UIComponents/Image.cpp"
    "Components/RenderComponents/UIComponents/CanvasComponent.cpp" 
    "Components/RenderComponents/UIComponents/RectTransform.cpp"
    "Components/RenderComponents/UIComponents/CanvasActions.cpp" 
    "Components/RenderComponents/UIComponents/Button.cpp" 
    "GameContext/Logger/ImGuiLogger.cpp"
    "GameContext/Logger/ConsoleLogger.cpp"
    "GameContext/Logger/FileLogger.cpp"
    "Components/Audio/AudioSource.cpp" 
    "Components/Audio/AudioListener.cpp"
    "Components/RenderComponents/TerrainComponent.cpp"
    "Components/Physics/BoxCollider.cpp" 
    "Physics/PhysicsSync.cpp" 
    "Components/Physics/Rigidbody.cpp"
    "Components/Physics/SphereCollider.cpp"
    "Components/Physics/Collider.cpp" 
	"Components/Physics/CapsuleCollider.cpp" 
    "Physics/Physics.cpp"
    "GameContext/Logger/NetworkLogger.cpp"
	"Graphics/Mesh.cpp" 
    "Graphics/Texture.cpp" 
    "Graphics/Material.cpp")

set(LeapEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)